fix: fix linter error
PiperOrigin-RevId: 856603002